--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<config.version>0.1.3.RELEASE</config.version>
 		<boot.version>0.2.0.RELEASE</boot.version>
 		<fileupload.version>1.2.1</fileupload.version>
+		<aspectj.version>1.6.8</aspectj.version>
 	</properties>
 
 	<dependencyManagement>
@@ -183,6 +184,17 @@
 				<scope>test</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 
