--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 
 	<properties>
 		<spring.version>4.2.0.RELEASE</spring.version>
-		<apple.version>0.1.3.RELEASE</apple.version>
-		<orm.version>0.0.8.RELEASE</orm.version>
-		<jms.version>0.0.7.RELEASE</jms.version>
-		<cache.version>0.0.5.RELEASE</cache.version>
-		<qos.version>0.0.5.RELEASE</qos.version>
-		<rest.version>1.0.7.RELEASE</rest.version>
-		<config.version>0.1.3.RELEASE</config.version>
-		<boot.version>0.2.0.RELEASE</boot.version>
+		<apple.version>0.1.6.RELEASE</apple.version>
+		<orm.version>0.1.4.RELEASE</orm.version>
+		<jms.version>0.1.4.RELEASE</jms.version>
+		<cache.version>0.3.3.RELEASE</cache.version>
+		<qos.version>0.0.6.RELEASE</qos.version>
+		<rest.version>1.1.1.RELEASE</rest.version>
+		<config.version>0.2.5.RELEASE</config.version>
+		<boot.version>0.3.2.RELEASE</boot.version>
 		<fileupload.version>1.2.1</fileupload.version>
 		<aspectj.version>1.6.8</aspectj.version>
 	</properties>
@@ -75,12 +75,12 @@
 			</dependency>
 			<dependency>
 				<groupId>com.appleframework.boot</groupId>
-				<artifactId>apple-boot-jetty</artifactId>
+				<artifactId>apple-boot-jetty8</artifactId>
 				<version>${boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.appleframework.boot</groupId>
-				<artifactId>apple-boot-tomcat</artifactId>
+				<artifactId>apple-boot-tomcat8</artifactId>
 				<version>${boot.version}</version>
 			</dependency>
 
@@ -200,6 +200,84 @@
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
 				<version>${aspectj.version}</version>
+			</dependency>
+			
+			<!-- spring -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jms</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-asm</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-expression</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-oxm</artifactId>
+				<version>${spring.version}</version>
 			</dependency>
 			
 		</dependencies>
