--- a/apple-ums-server-storage/apple-ums-server-storage-db/pom.xml
+++ b/apple-ums-server-storage/apple-ums-server-storage-db/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.appleframework.ums</groupId>
 		<artifactId>apple-ums-server-storage</artifactId>
-		<version>0.0.1.BETA</version>
+		<version>0.1.0.RELEASE</version>
 	</parent>
 	<artifactId>apple-ums-server-storage-db</artifactId>
 	<name>apple-ums-server-storage-db</name>
