--- a/apple-ums-server-storage/apple-ums-server-storage-hive/pom.xml
+++ b/apple-ums-server-storage/apple-ums-server-storage-hive/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>com.appleframework.ums</groupId>
     <artifactId>apple-ums-server-storage</artifactId>
-    <version>0.0.1.BETA</version>
+    <version>0.1.0.RELEASE</version>
   </parent>
   <groupId>com.appleframework.ums</groupId>
   <artifactId>apple-ums-server-storage-hive</artifactId>
-  <version>0.0.1.BETA</version>
+  <version>0.1.0.RELEASE</version>
   <name>apple-ums-server-storage-hive</name>
   <url>http://maven.apache.org</url>
   <properties>
