新版本代码优化

--- a/apple-ums-server-storage/apple-ums-server-storage-db/pom.xml
+++ b/apple-ums-server-storage/apple-ums-server-storage-db/pom.xml
@@ -91,6 +91,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.24</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.11</artifactId>
+  			<version>0.10.0.0</version>
+		</dependency>
 
 	</dependencies>
 	
