--- a/apple-ums-server-storage/apple-ums-server-storage-db/src/test/resources/system.properties
+++ b/apple-ums-server-storage/apple-ums-server-storage-db/src/test/resources/system.properties
@@ -1,6 +1,6 @@
-application.name=ums-storage
+application.name=ums-storage-db
 
 #test dev beta realse
 deploy.dataId=ums-storage-db
-deploy.group=usm
-deploy.env=xusm
+deploy.group=ums
+deploy.env=dev
