新版本优化代码

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 hs_err_pid*
 /target/
 */target/
+*/*/target/
 .settings
 .project
 */.settings
 */.project
 *.classpath
 *.log
+*/src/main/resources/*.properties
